--------
v5.0-git
--------

[mms] Add auto-save draft to IMP (Request #7656).
[mms] Add hook to dynamically change mailbox label (Request #6734).
[mms] Improved address expansion in MIMP.
[mms] Load folders on-demand in sidebar (DIMP).
[mms] Add priority setting to DIMP.
[mms] Simplify and improve priority header generation/display.
[mms] Add Face: header support to IMP.
[mms] Add splitbar to resize sidebar in DIMP.
[mms] Use LIST-EXTENDED IMAP extension (RFC 5258), if available, to get
      subscribed mailbox information.
[mms] Split ham/spam reporting actions into two separate preferences (Request
      #8221).
[mms] When clicking on base reply button, auto-determine the best way to
      reply to a message based on the header information.
[mms] Add vertical-pane preview layout to DIMP.
[mms] Wrap content-related MIME parts in a border when viewing inline to
      indicate their relationship.
[mms] For drafts, save the original message index for forwards/replies so when
      eventually sent, log information can be updated (Request #8663).
[mms] Upgrade RTE to CKEditor v3.
[mms] Sort by display name for to/from fields if supported on IMAP server.
[mms] Add ability to quickly filter by flags in DIMP.
[mms] Add ability to select sent-mail mailbox when composing in DIMP.
[mms] Add ability to save drafts in MIMP.
[mms] Add spam reporting in MIMP.
[mms] Added contextmenu support in DIMP for Opera.
[mms] Display HTML parts inline by using IFRAMEs (based on code by
      rui.carneiro@portugalmail.net; Request #8592).
[mms] Add ability to search by relative date intervals (Request #3438).
[mms] Add advanced search query interface to DIMP (Request #6875).
[mms] Add ability to search by a custom defined header (Request #6875).
[mms] Improved advanced search query interface (Request #6875).
[mms] More intelligent ordering of autocomplete search results.
[mms] Add a mini search query interface to IMP (Request #6875).