@@ -94,8 +94,9 @@ function _getListMessages($mbox, $change)
     } else {
         $search = Horde_Serialize::unserialize($search, Horde_Serialize::JSON);
         $args += array(
-            'search_uid' => $search->imapuid,
-            'search_view' => $search->view,
+            'search_uid' => isset($search->imapuid) ? $search->imapuid : null,
+            'search_unseen' => isset($search->unseen) ? $search->unseen : null,
+            'search_view' => isset($search->view) ? $search->view : null
         );
     }
 
